<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Base">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_marginTopPercent="18%"
        app:layout_marginLeftPercent="30%"
        app:layout_heightPercent="17.3%"
        app:layout_widthPercent="44%"
        android:src="@mipmap/mark"
        android:id="@+id/login_mark"
        android:contentDescription="@string/login_description"
        />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="55.7%"
        app:layout_marginLeftPercent="8%"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="72%"
        android:text="@string/login_username"
        android:textSize="16sp"
        android:id="@+id/login_username"
        android:layout_gravity="center_vertical" />
    <EditText
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="61.1%"
        app:layout_marginLeftPercent="8%"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="84%"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email"
        android:textSize="18sp"
        android:ems="10"
        android:id="@+id/login_email"
        android:focusableInTouchMode="true"/>

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="68.6%"
        app:layout_marginLeftPercent="8%"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="84%"
        android:text="@string/login_password"
        android:textSize="16sp"
        android:id="@+id/login_password"
        android:layout_gravity="center_vertical" />
    <EditText
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="73%"
        app:layout_marginLeftPercent="8%"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="84%"
        android:inputType="textPassword"
        android:text="@string/login_password"
        android:textSize="18sp"
        android:ems="10"
        android:id="@+id/login_input_password"
        android:focusableInTouchMode="true"
        />


<Button
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    app:layout_marginTopPercent="81%"
    app:layout_marginLeftPercent="8%"
    app:layout_heightPercent="8.2%"
    app:layout_widthPercent="84%"
    android:id="@+id/login_button"
    android:background="@drawable/simple_button"
    android:text="@string/login_button"
    android:gravity="center"
    android:elevation="2dp"
    android:clickable="true"
    />


</android.support.percent.PercentRelativeLayout>